# model-training

./: .bandit  .flake8  .gitignore  .pylintrc  README.md  dev-requirements.txt  dvc.yaml  ml_code_smell_check.py  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: prerelease.yml  release.yml  testing-requirements.txt  testing.yml
data/: RestaurantReviews_HistoricDump.tsv.dvc
model-training/restaurant_sentiment/: eval.py  get_data.py  preprocess.py  train.py
model-training/tests/: test_feature_data.py  test_infra.py  test_model_development.py  test_monitor_performance.py  test_mutamorphic.py  utils.py
notebooks/: exploratory.ipynb
pylint_plugins/: ml_code_smell_check.py
scripts/: calculate_ml_test_score.py
src/restaurant_sentiment/: data_loader.py  train.py
